# MEPHI_Lab_C_plus_4

./: CMakeLists.txt  README.md  UML.mdj  text
Code/: Game.cpp  Game.h  cratures_templates.hpp  main.cpp  text
Code/Creatures/: Creature.cpp  Creature.h
Code/Hero/: Hero.cpp  Hero.h
Code/Tests/: HeroClassTest.cpp
Code/tools/: tools.cpp  tools.h
Doxygen/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _creature_8cpp.html  _creature_8h.html  _creature_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _goblin_class_8cpp.html  _goblin_class_8h.html  _goblin_class_8h_source.html  _hero_8cpp.html  _hero_8h.html  _hero_8h_source.html  _mercenary_class_8cpp.html  _mercenary_class_8h.html  _mercenary_class_8h_source.html  _ogre_class_8cpp.html  _ogre_class_8h.html  _ogre_class_8h_source.html  _target_directories_8txt.html  annotated.html  class_creature-members.html  class_creature.html  class_game-members.html  class_game.html  class_goblin_class-members.html  class_goblin_class.html  class_hero-members.html  class_hero.html  class_mercenary_class-members.html  class_mercenary_class.html  class_ogre_class-members.html  class_ogre_class.html  classcreatures__templates-members.html  classcreatures__templates.html  classes.html  clion-environment_8txt.html  (+72 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+80 more)
(+19 files in other folders)
